--- a/style.css
+++ b/style.css
@@ -1,9 +1,23 @@
-.face {
-    width: 100%;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
+body{
+    background-color: #EEF9BF;
+    font-family: 'Roboto', sans-serif;
+}
+main{
     height: 100%;
-    background-color: #A7E9AF;
-    border-radius: 10px;
-    box-shadow: 1px 1px 1px rgba(0,0,0,.3);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 40px;
+   
+}
+.face {
+    width: 117px;
+    height: 146px;
+    background: #A7E9AF;
+    border: 1px solid #99CEA8;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,7 +26,11 @@
     transition: all .5s;
     transform-style: preserve-3d;
   }
-
+  .card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .back-face {
     transform: rotateY(180deg);
   }
@@ -23,4 +41,30 @@
 
   .card:hover .front-face {
     transform: rotateY(-180deg);
+  }
+
+  .back{
+    width: 100px;
+    height: 100px;
+  }
+  .front{
+    width: 100px;
+    height: 100px;
+  }
+  h1{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 66px;
+    letter-spacing: -0.004em;
+    color: #75B79E;
+  }
+  .container-cartas{
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 180px;
+    margin-top: 147px;
   }
