cartas giram onclick

--- a/style.css
+++ b/style.css
@@ -35,11 +35,11 @@ main{
     transform: rotateY(180deg);
   }
 
-  .card:hover .back-face {
+  .girar-back-face {
     transform: rotateY(0deg);
   }
 
-  .card:hover .front-face {
+  .girar-front-face {
     transform: rotateY(-180deg);
   }
 
