--- a/style.css
+++ b/style.css
@@ -69,9 +69,18 @@ main{
     gap: 150px;
     margin-top: 100px;
   }
-  .correto{
-
-  }
-  .virado{
-    
+  @media (max-width: 629px) {
+    .container-cartas{
+      flex-direction: column;
+      height: auto;
+      width: 30%;
+    }
+    h1{
+      font-size: 36px;
+      line-height: 42px;
+      text-align: center;
+    }
+    .card{
+      margin-bottom:34px;
+    }
   }
